--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;1,500&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="Assets/css/style.css">
+    <link rel="stylesheet" href="Assets/css/mobile.css">
     <script src="main.js" defer></script>
 
 </head>
@@ -22,6 +23,9 @@
             <a href="#shop" class="action-link">Farmácia</a>
             <a href="#duvidas" class="action-link">Dúvidas</a>
         </nav>
+        <button class="menu-button">
+            <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+        </button>
     </header>
     <main>
         <section id="inicio">
